# logcheck

./: .gitignore  README.md  pyproject.toml
docs/: course-report-notes.md  log-detection-research-notes.md  web-frontend-verification.md
docs/superpowers/plans/: 2026-06-02-log-intrusion-detector.md  2026-06-03-logcheck-desktop-frontend.md  2026-06-04-enhance-desktop-log-workflow.md  2026-06-04-enhance-frontend-log-rules-workflow.md  2026-06-04-sidebar-navigation-actions.md  2026-06-05-comprehensive-logcheck-iteration.md  2026-06-06-redesign-desktop-investigation-workbench.md  2026-06-07-rebuild-web-frontend.md  2026-06-09-improve-alert-detail-workflow.md  2026-06-09-local-visualization-charts.md  2026-06-10-fix-export-and-improve-detection.md  2026-06-11-enhance-finding-workbench-analytics.md  2026-06-14-optimize-access-log-detection-rules.md  2026-06-15-enhance-visual-reports-and-log-samples.md  2026-06-15-offline-ip-context-rules.md  2026-06-16-refactor-rules-scoring-model.md
logcheck/: analysis.py  cli.py  config.py  default_rules.toml  desktop.py  exporters.py  insights.py  ip_context.py  models.py  parsers.py  rules.py  web_serialization.py  webapp.py
logcheck/web_static/: app.js  index.html  styles.css
openspec/changes/rebuild-web-frontend/: .comet.yaml  (+2 more)
tests/: __init__.py  test_analysis.py  test_chart_data_adapter.py  test_cli.py  test_desktop.py  test_exporters.py  test_insights.py  test_ip_context.py  test_models.py  test_parsers.py  test_rule_config.py  test_rules.py  test_samples.py  test_scoring_engine.py  test_web_serialization.py  test_webapp.py
(+185 files in other folders)
