[project]
name = "logcheck"
version = "0.1.0"
description = "Offline log intrusion behavior detector for course design"
requires-python = ">=3.11"

[project.scripts]
logcheck = "logcheck.cli:main"

[tool.setuptools]
packages = ["logcheck"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
